# rwinq

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  issue.md
common/: Cargo.toml
common/src/: bond.rs  cmm.rs  fund.rs  lib.rs  stock.rs
data/: Cargo.toml
data/src/: lib.rs  main.rs  sync.rs  syncer.rs  types.rs
data/src/store/: mod.rs
data/src/store/clickhouse/: clickhouse.rs  mod.rs
data/src/store/mongo/: bond_daily.rs  bond_info.rs  fund_daily.rs  fund_info.rs  fund_net.rs  index_daily.rs  index_info.rs  loader.rs  mod.rs  mongo.rs  mongo_index.rs  service.rs  stock_concept.rs  stock_concept_daily.rs  stock_concept_detail.rs  stock_daily.rs  stock_index.rs  stock_industry.rs  stock_industry_daily.rs  stock_industry_detail.rs  stock_info.rs  stock_margin.rs  stock_yjbb.rs  trade_date.rs
data/src/store/mysql/: mod.rs  mysql.rs
data/src/store/sqlite/: mod.rs  sqlite.rs
examples/strategy/test_strategy/: Cargo.toml
examples/strategy/test_strategy/src/: lib.rs  test_strategy.rs
fetch/: Cargo.toml
fetch/src/: lib.rs  util.rs
fetch/src/bond/: bond_fetch.rs  hiq_bond_fetch.rs  hiq_bond_info.rs  mod.rs
fetch/src/comm/: fetch.rs  hiq_fetch.rs  hiq_trade_date.rs  mod.rs  trade_date.rs  trans_info.rs
fetch/src/fund/: fund_fetch.rs  hi_fund_fetch.rs  mod.rs  trans_info.rs
fetch/src/stock/: hiq_stock_fetch.rs  hiq_stock_info.rs  mod.rs  stock_fetch.rs  trans_info.rs
fetch/src/ta/: chip_dist.rs  mod.rs
flutter/hiq/: README.md  pubspec.yaml
flutter/hiq/assets/iconfont/: iconfont.css
flutter/hiq/lib/: main.dart
flutter/hiq/lib/src/: home_page.dart  lock_page.dart
flutter/hiq/lib/src/app/: constant.dart  constants.dart  iconfont.dart
flutter/hiq/lib/src/components/: nav_bar.dart  nav_content.dart  status_bar.dart  tab_title.dart  title_bar.dart  tree.dart
flutter/hiq/lib/src/views/: config.dart  dashboard.dart  data.dart  data_sync_view.dart  favorite.dart  favorite_view.dart  research.dart  strategy.dart  strategy_view.dart  trade.dart
flutter/hiq/linux/: CMakeLists.txt  my_application.cc
flutter/hiq/macos/Runner.xcodeproj/: project.pbxproj
flutter/hiq/macos/Runner/Configs/: AppInfo.xcconfig
flutter/hiq/test/: widget_test.dart
flutter/hiq/web/: index.html  manifest.json
flutter/hiq/windows/: CMakeLists.txt
flutter/hiq/windows/runner/: Runner.rc  main.cpp
flutter/winq/: README.md  pubspec.yaml
flutter/winq/assets/iconfont/: iconfont.css
flutter/winq/lib/: main.dart
flutter/winq/lib/src/: home_page.dart
flutter/winq/lib/src/app/: iconfont.dart  nav.dart
flutter/winq/lib/src/components/: nav_bar.dart  status_bar.dart  title_bar.dart  tree.dart
flutter/winq/lib/src/views/: config.dart  dashboard.dart  data.dart  favorite.dart  research.dart  trade.dart
flutter/winq/linux/: CMakeLists.txt  my_application.cc
flutter/winq/macos/Runner.xcodeproj/: project.pbxproj
flutter/winq/macos/Runner/Configs/: AppInfo.xcconfig
flutter/winq/web/: index.html  manifest.json
flutter/winq/windows/: CMakeLists.txt
flutter/winq/windows/runner/: Runner.rc  main.cpp
python/docs/: conf.py  index.rst  intro.md
python/docs/fetch/: bond.md  fund.md  general.md  index.rst  stock.md
python/docs/source/: conf.py  index.rst  requirements.txt
python/hiq-pycommon/: Cargo.toml
python/hiq-pycommon/src/types/: bond.rs  cmm.rs  fund.rs  mod.rs  stock.rs
python/hiq-pydata/: Cargo.toml  pyproject.toml
python/hiq-pydata/hiq_pydata/: __init__.py  hiq_loader.py  hiq_mongo.py  hiq_pydata.pyi
python/hiq-pydata/src/: hiq_mongo.rs  hiq_sync.rs  lib.rs
python/hiq-pyfetch/: Cargo.toml  pyproject.toml
python/hiq-pyfetch/hiq_pyfetch/: __init__.py  hiq_fetch.py  hiq_pyfetch.pyi  my_fetch.py
python/hiq-pyfetch/src/: bond.rs  fund.rs  lib.rs  stock.rs  util.rs
python/hiq-pystrategy/: Cargo.toml  pyproject.toml
python/hiq-pystrategy/hiq_pystrategy/: __init__.py  hiq_pystrategy.pyi  hiq_runner.py  my_runner.py  strategy.py  test_strategy.py
python/hiq-pystrategy/src/: lib.rs  runner.rs  types.rs
python/hiq-pystrategy/src/ma/: ma.rs
python/hiq_py/: setup.py
python/hiq_py/hiq_py/: __init__.py  common.py
python/hiq_py/hiq_py/strategy/: __init__.py  base_strategy.py  strategy.py
python/hiq_py/hiq_py/strategy/test/: ma_turn.py  right_side.py  shock_rise.py
python/pywq/: setup.py
python/pywq/pywq/: __init__.py
python/pywq/pywq/strategy/: __init__.py  base_strategy.py
python/pywq/pywq/strategy/test/: ma_turn.py  right_side.py  shock_rise.py
python/pywqcommon/: Cargo.toml
python/pywqcommon/src/: lib.rs  util.rs
python/pywqcommon/src/types/: bond.rs  cmm.rs  fund.rs  stock.rs
python/pywqdata/: Cargo.toml  pyproject.toml
python/pywqdata/pywqdata/: __init__.py  mongo.py  sync.py
python/pywqdata/src/: lib.rs  pywqmongo.rs  pywqsync.rs
python/pywqfetch/: Cargo.toml  pyproject.toml
python/pywqfetch/pywqfetch/: __init__.py  calc_chip.py  fetch.py  pywqfetch.pyi
python/pywqfetch/src/: bond.rs  fund.rs  lib.rs  stock.rs  ta.rs
python/pywqfetch/src/types/: mod.rs  ta.rs
python/pywqstrategy/: Cargo.toml  pyproject.toml
python/pywqstrategy/pywqstrategy/: __init__.py  pywqstrategy.pyi  runner.py  strategy.py  test_strategy.py
python/pywqstrategy/src/: lib.rs  runner.rs  types.rs
python/pywqstrategy/src/ma/: ma.rs  mod.rs
rwinq/: Cargo.toml
rwinq/src/: lib.rs  main.rs  winq.rs
strategy/: Cargo.toml
strategy/src/: context.rs  lib.rs  main.rs  runner.rs  strategy.rs  util.rs
strategy/src/broker/: mod.rs
strategy/src/mystrategy/: exam_strategy.rs  mod.rs  right_side.rs
strategy/src/mystrategy/broker/: simulate.rs
strategy/src/mystrategy/risk/: dummy.rs  mod.rs  stop_lost_profit.rs
strategy/src/mystrategy/select/: exam_strategy.rs  right_side.rs
strategy/src/risk/: mod.rs
strategy/src/select/: mod.rs
strategy/src/ta/: ma.rs  mod.rs
strategy/src/trade/: mod.rs
trade/: Cargo.toml
trade/src/: investor.rs  lib.rs  quot.rs  quotation.rs
tradecomm/: Cargo.toml
tradecomm/src/: account.rs  common.rs  deal.rs  entrust.rs  event.rs  lib.rs  position.rs  signal.rs
(+14 files in other folders)
