[workspace]
members = [
  "common",
  "fetch",
  "data",
  "strategy",
  "python/hiq-pycommon",
  "python/hiq-pyfetch",
  "python/hiq-pydata",
  "python/hiq-pystrategy",
  "examples/strategy/test_strategy",
]
# exclude = [
#     "python/hiq-pyfetch"
# ]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
