[workspace]
resolver = "2"
members = [
  "common",
  "fetch",
  "data",
  "strategy",
  "python/pywqcommon",
  "python/pywqfetch",
  "python/pywqdata",
  "python/pywqstrategy",
  "examples/strategy/test_strategy",
]


[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[profile.dev]
panic = "abort"

[profile.bench]
debug = 1

[profile.minimal]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
