[workspace]
members = [
  "common",
  "fetch",
  "data",
  "strategy",
  "tradecomm",
  "trade",
  "rwinq",
  "python/pywqcommon",
  "python/pywqfetch",
  "python/pywqdata",
  "python/pywqstrategy", # "examples/strategy/test_strategy",
]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[profile.dev]
panic = "abort"

[profile.bench]
debug = 1

[profile.minimal]
codegen-units = 1
inherits = "release"
lto = true
opt-level = "z"
