[package]
name = "rwqcmm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib", ]

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.28", features = ["serde"] }
bson = {version = "2.7.0", features = ["chrono-0_4"]}