[package]
edition = "2021"
name = "rwqcmm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
chrono = {version = "0.4.28", features = ["serde"]}
serde = {version = "1.0.188", features = ["derive"]}
