[package]
edition = "2021"
name = "rwqdata"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.75"
chrono = {version = "0.4.28", features = ["serde"]}
futures = "0.3"
mongodb = {version = "2.6.1", features = ["bson-chrono-0_4"]}
thiserror = "1.0.47"
tokio = {version = "1.32.0", features = ["full"]}

async-trait = "0.1.73"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"

fern = "0.6.2"
log = "0.4.20"

sqlx = {version = "0.7", features = ["runtime-tokio", "tls-native-tls"]}

argh = "0.1.12"
rwqfetch = {path = "../fetch"}
