[package]
edition = "2021"
name = "rwqfetch"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
async-trait = "0.1.73"
calamine = "0.22.0"
chrono = { version = "0.4.28", features = ["serde"] }
rwqcmm = { path = "../common" }
js-sandbox = { git = "https://github.com/Bromeon/js-sandbox.git" }
once_cell = "1.18.0"
reqwest = { version = "0.11.20", features = [
    "blocking",
    "json",
    "cookies",
    "gzip",
] }
serde = { version = "1.0.18", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.47"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
