[package]
edition = "2021"
name = "rwqfetch"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
async-trait = "0.1.73"
calamine = "0.22.0"
chrono = {version = "0.4.28", features = ["serde"]}
futures = "0.3"
js-sandbox = {git = "https://github.com/Bromeon/js-sandbox.git"}
num-traits = "0.2.16"
once_cell = "1.18.0"
regex = "1.5.4"
reqwest = {version = "0.11.20", features = [
  "blocking",
  "json",
  "cookies",
  "gzip",
]}
rwqcmm = {path = "../common"}
serde = {version = "1.0.18", features = ["derive"]}
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = {version = "1.31.0", features = ["full"]}
tracing = "0.1.37"

[dev-dependencies]
tracing-error = "0.2.0"
tracing-subscriber = {version = "0.3.17", features = ["std", "env-filter", "fmt"]}
