[package]
edition = "2021"
name = "rwinq"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bson = {version = "2.7.0", features = ["chrono-0_4", "serde_with"]}
chrono = {version = "0.4.28", features = ["serde"]}
libc = "0.2.147"
libloading = "0.8.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
sqlx = "0.7.2"
tokio = {version = "1.33.0", features = ["full"]}
tower = {version = "0.4.13", features = ["util", "timeout"]}
tower-http = {version = "0.4.4", features = ["add-extension", "trace"]}
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}

rwqstrategy = {path = "../strategy"}
rwqtrade = {path = "../trade"}