[package]
edition = "2021"
name = "hiq_strategy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.66"
argh = "0.1.9"
async-trait = "0.1.58"
bson = {version = "2.4.0", features = ["chrono-0_4", "serde_with"]}
chrono = {version = "0.4.23", features = ["serde"]}
fern = "0.6.1"
futures = "0.3"
log = "0.4.17"
thiserror = "1.0.37"
tokio = {version = "1.21.2", features = ["full"]}
libloading = "0.7.4"
libc = "0.2.138"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
hiq_data = {path = "../data"}
