[package]
edition = "2021"
name = "rwqtrade"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
async-trait = "0.1.73"
bson = {version = "2.7.0", features = ["chrono-0_4", "serde_with"]}
chrono = {version = "0.4.28", features = ["serde"]}
futures = "0.3"
libc = "0.2.147"
libloading = "0.8.0"
rwqdata = {path = "../data"}
rwqtradecmm = {path = "../tradecomm"}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
thiserror = "1.0.47"
tokio = {version = "1.32.0", features = ["full"]}
tracing = "0.1.37"

rwqstrategy = {path = "../strategy"}