[package]
edition = "2021"
name = "rwqtradecmm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
chrono = {version = "0.4.28", features = ["serde"]}
rwqcmm = {path = "../common"}
serde = {version = "1.0.188", features = ["derive"]}
uuid = {version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
