[package]
edition = "2021"
name = "hiq_pycommon"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
chrono = {version = "0.4.23", features = ["serde"]}
hiq_common = {path = "../../common"}
pyo3 = {version = "0.17.3", features = ["extension-module", "chrono"]}
serde = {version = "1.0.147", features = ["derive"]}
tokio = {version = "1.21.2", features = ["rt-multi-thread"]}
