[package]
edition = "2021"
name = "pywqcmm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
chrono = {version = "0.4.29", features = ["serde"]}
pyo3 = {version = "0.19.2", features = ["extension-module", "chrono"]}
pythonize = {version = "0.19.0"}
rwqcmm = {path = "../../common"}
serde = {version = "1.0.188", features = ["derive"]}
tokio = {version = "1.32.0", features = ["rt-multi-thread"]}
