[package]
edition = "2021"
name = "pywqstrategy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "pywqstrategy"

[dependencies]
async-trait = "0.1.73"
pywqcmm = { path = "../pywqcommon" }
rwqstrategy = { path = "../../strategy" }
log = "0.4.20"
pyo3 = { version = "0.19.2", features = ["extension-module", "chrono"] }
pyo3-asyncio = { version = "0.19.0", features = [
    "attributes",
    "tokio-runtime",
] }
pyo3-log = "0.8.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
[build-dependencies]
pyo3-build-config = "0.19.2"
