[package]
edition = "2021"
name = "test_strategy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
async-trait = "0.1.58"
bson = "2.4.0"
libc = "0.2.138"

hiq_strategy = {path = "../../../strategy"}
