[package]
edition = "2021"
name = "test_strategy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
async-trait = "0.1.73"
bson = "2.7.0"
libc = "0.2.147"

rwqstrategy = { path = "../../../strategy" }
